Initial commit. Everything compiles, but there are still a few exceptions happening when testing the reference pillar.